--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <script>
        
-            alert("Shukriya for your good wishesh !")
+            alert("Thank You for your good wishesh❤️ !")
         
 
     </script>
